--- a/gilded-rose.cabal
+++ b/gilded-rose.cabal
@@ -16,6 +16,7 @@ library
 
 executable gilded-rose
   main-is:           Main.hs
+  other-modules:     GildedRose
   build-depends:     gilded-rose, base >=4.7 && <5
   hs-source-dirs:    src
   default-language:  Haskell2010
@@ -30,5 +31,6 @@ test-suite spec
   build-depends:     base >=4.7 && <5
                    , gilded-rose
                    , hspec
+                   , hspec-discover
                    , hspec-expectations
                    , QuickCheck
